@@ -1,3 +1,6 @@
+* Mon Aug 28 2023 Steven Pritchard <steve@sicura.us> - 0.11.0
+- Add support for Puppet 8, Ruby 3, and stdlib 9
+
 * Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 0.10.0
 - Add AlmaLinux 8 support
 
